# GSO-SLAM

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Doxyfile  README.md  compose.cuda.yml  compose.rocm.yml  mkdocs.yml
.github/workflows/: compile-test.yml  docker-build.yml  docs.yml
cfg/gaussian_mapper/Monocular/Replica/: office1_quality.yaml  replica_mono.yaml  room0.yaml  room0_quality.yaml
cfg/gaussian_mapper/Monocular/TUM/: tum_freiburg1_desk.yaml  tum_freiburg1_desk.yaml.bak  tum_freiburg1_desk_quality.yaml  tum_freiburg2_xyz.yaml  tum_freiburg3_long_office_household.yaml  tum_kitchen_icl_10hz.yaml  tum_kitchen_icl_10hz_aligned_depthprune.yaml  tum_kitchen_icl_10hz_depthprune.yaml  tum_kitchen_icl_10hz_dsoseed_only.yaml  tum_kitchen_icl_10hz_geomprune.yaml  tum_kitchen_icl_1hz.yaml
cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  forward.cu  forward.h  rasterizer_impl.cu  rasterizer_impl.h
dataset/: convert_embedding_map_to_tum.py  preprocess.sh
docker/: Dockerfile.cuda  Dockerfile.rocm  run_rocm_gui_tum.sh
docker/compose/: eval_replica_ate.sh  eval_replica_depth.sh  eval_replica_rendering.sh  eval_tum_ate.sh  image_smoke.sh  preprocess_datasets.sh
docs/: architecture.md  bug3_rgb_depth_scale_drift.md  container_quickstart.md  dependencies.md  embedding_map_to_tum.md  index.md  pipeline_detailed.md  python_wrapping.md  rgbd_pipeline_status.md  rocm_port.md  ros2_integration.md  semantic_mapping.md  triton_kernels.md  view_results_in_jupyter.ipynb
docs/api/: index.md
experiments_bash/: eval_psnr.py  replica.sh  replica_eval_depth.sh  replica_eval_rendering.sh  tum.sh
experiments_bash/scripts/: eval_rendering.py  evaluate_ate_scale_replica.py  evaluate_ate_scale_tum.py
include/: camera.h  gaussian_keyframe.h  gaussian_mapper.h  gaussian_model.h  gaussian_parameters.h  gaussian_renderer.h  gaussian_scene.h  gaussian_trainer.h  general_utils.h  graphics_utils.h  loss_utils.h  opencv_cuda_compat.h  tensor_utils.h  types.h
jsoncpp/json/: json.h
scripts/: run_bridge_comparisons.sh
src/: main_dso_pangolin.cpp
src/FullSystem/: CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  HessianBlocks.h
src/GS/: gaussian_mapper.cpp  gaussian_model.cpp  operate_points.cu  rasterize_points.cu  stereo_vision.cu
src/IOWrapper/: ImageRW.h  ImageRW_dummy.cpp
src/IOWrapper/OpenCV/: ImageRW_OpenCV.cpp
src/OptimizationBackend/: AccumulatedSCHessian.h  AccumulatedTopHessian.h  EnergyFunctionalStructs.h  MatrixAccumulators.h
src/util/: DatasetReader.h  IndexThreadReduce.h  NumType.h  Undistort.cpp  globalFuncs.h  settings.cpp  settings.h
