SET(PROJECT_NAME DSO)

CMAKE_MINIMUM_REQUIRED(VERSION 3.22 FATAL_ERROR)

option(USE_ROCM "Build with AMD ROCm/HIP instead of NVIDIA CUDA" OFF)

if(USE_ROCM AND NOT DEFINED CMAKE_CXX_COMPILER)
    find_program(GSO_ROCM_CLANGXX
        NAMES amdclang++ clang++
        HINTS /opt/rocm/bin /opt/rocm/llvm/bin /opt/rocm-7.2.1/bin /opt/rocm-7.2.1/lib/llvm/bin)
    if(GSO_ROCM_CLANGXX)
        set(CMAKE_CXX_COMPILER "${GSO_ROCM_CLANGXX}" CACHE FILEPATH "ROCm host C++ compiler" FORCE)
    endif()
endif()

if(USE_ROCM)
    PROJECT(${PROJECT_NAME} LANGUAGES CXX HIP C)
else()
    PROJECT(${PROJECT_NAME} LANGUAGES CXX CUDA C)
endif()
#set(CMAKE_VERBOSE_MAKEFILE ON)

set(BUILD_TYPE Release)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
if(NOT USE_ROCM)
    set(CMAKE_CUDA_STANDARD 17)
endif()
#set(BUILD_TYPE RelWithDebInfo)
set(CAFFE2_USE_CUDNN on)


set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
set(EXECUTABLE_OUTPUT_PATH bin)
set(LIBRARY_OUTPUT_PATH lib)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

# required libraries
# set(PYTHON_EXECUTABLE "/usr/bin/python3")
find_package(Torch REQUIRED)
if(USE_ROCM)
    string(REGEX REPLACE "--offload-arch=[^ ]+" "" GSO_TORCH_CXX_FLAGS "${TORCH_CXX_FLAGS}")
else()
    set(GSO_TORCH_CXX_FLAGS "${TORCH_CXX_FLAGS}")
endif()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GSO_TORCH_CXX_FLAGS} -pthread")
include_directories(${TORCH_INCLUDE_DIRS})
set(GSO_TORCH_LINK_LIBRARIES "")
foreach(torch_lib IN LISTS TORCH_LIBRARIES)
    list(APPEND GSO_TORCH_LINK_LIBRARIES "$<LINK_ONLY:${torch_lib}>")
endforeach()
if(USE_ROCM)
    foreach(torch_lib IN LISTS TORCH_LIBRARIES)
        if(TARGET ${torch_lib})
            get_target_property(GSO_TORCH_INTERFACE_COMPILE_OPTIONS ${torch_lib} INTERFACE_COMPILE_OPTIONS)
            if(GSO_TORCH_INTERFACE_COMPILE_OPTIONS)
                set(GSO_SANITIZED_TORCH_INTERFACE_COMPILE_OPTIONS "")
                foreach(torch_opt IN LISTS GSO_TORCH_INTERFACE_COMPILE_OPTIONS)
                    if(NOT torch_opt MATCHES "--offload-arch=.*")
                        list(APPEND GSO_SANITIZED_TORCH_INTERFACE_COMPILE_OPTIONS "${torch_opt}")
                    endif()
                endforeach()
                set_property(TARGET ${torch_lib} PROPERTY
                    INTERFACE_COMPILE_OPTIONS "${GSO_SANITIZED_TORCH_INTERFACE_COMPILE_OPTIONS}")
            endif()
        endif()
    endforeach()
    set(GSO_TORCH_TARGET_LIBRARIES ${GSO_TORCH_LINK_LIBRARIES})
else()
    set(GSO_TORCH_TARGET_LIBRARIES ${TORCH_LIBRARIES})
endif()
find_package(SuiteParse REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(Boost COMPONENTS system thread) 
if(USE_ROCM)
    # Use config-mode find_package for ROCm 5.7+ (lowercase 'hip').
    # The legacy uppercase FindHIP module is incompatible with PyTorch's
    # LoadHIP.cmake which is loaded by find_package(Torch) on ROCm builds.
    find_package(hip REQUIRED CONFIG)
    find_package(hipcub REQUIRED CONFIG)
    add_definitions(-DUSE_ROCM)
else()
    find_package(CUDA REQUIRED)
endif()
find_package(glm REQUIRED)
find_package(OpenGL REQUIRED)
find_package(jsoncpp REQUIRED)
find_package(VTK REQUIRED)
find_package(PCL REQUIRED)

# optional libraries
find_package(LibZip QUIET)
find_package(Pangolin 0.2 QUIET)
find_package(OpenCV QUIET)


include(FetchContent)
FetchContent_Declare(rerun_sdk URL
    https://github.com/rerun-io/rerun/releases/latest/download/rerun_cpp_sdk.zip)
FetchContent_MakeAvailable(rerun_sdk)

# flags
add_definitions("-DENABLE_SSE")
set(CMAKE_CXX_FLAGS
   "${SSE_FLAGS} -O3 -g -std=c++0x -march=native"
#   "${SSE_FLAGS} -O3 -g -std=c++0x -fno-omit-frame-pointer"
)

if (MSVC)
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
endif (MSVC)

# Sources files
set(dso_SOURCE_FILES
  ${PROJECT_SOURCE_DIR}/src/FullSystem/FullSystem.cpp
  ${PROJECT_SOURCE_DIR}/src/FullSystem/FullSystemOptimize.cpp
  ${PROJECT_SOURCE_DIR}/src/FullSystem/FullSystemOptPoint.cpp
  ${PROJECT_SOURCE_DIR}/src/FullSystem/FullSystemDebugStuff.cpp
  ${PROJECT_SOURCE_DIR}/src/FullSystem/FullSystemMarginalize.cpp
  ${PROJECT_SOURCE_DIR}/src/FullSystem/Residuals.cpp
  ${PROJECT_SOURCE_DIR}/src/FullSystem/CoarseTracker.cpp
  ${PROJECT_SOURCE_DIR}/src/FullSystem/CoarseInitializer.cpp
  ${PROJECT_SOURCE_DIR}/src/FullSystem/ImmaturePoint.cpp
  ${PROJECT_SOURCE_DIR}/src/FullSystem/HessianBlocks.cpp
  ${PROJECT_SOURCE_DIR}/src/FullSystem/PixelSelector2.cpp
  ${PROJECT_SOURCE_DIR}/src/OptimizationBackend/EnergyFunctional.cpp
  ${PROJECT_SOURCE_DIR}/src/OptimizationBackend/AccumulatedTopHessian.cpp
  ${PROJECT_SOURCE_DIR}/src/OptimizationBackend/AccumulatedSCHessian.cpp
  ${PROJECT_SOURCE_DIR}/src/OptimizationBackend/EnergyFunctionalStructs.cpp
  ${PROJECT_SOURCE_DIR}/src/util/settings.cpp
  ${PROJECT_SOURCE_DIR}/src/util/Undistort.cpp
  ${PROJECT_SOURCE_DIR}/src/util/globalCalib.cpp
)


include_directories(
  ${PROJECT_SOURCE_DIR}/src
  ${PROJECT_SOURCE_DIR}/thirdparty/Sophus
  ${PROJECT_SOURCE_DIR}/thirdparty/sse2neon
  ${EIGEN3_INCLUDE_DIR}
  ${OPENGL_INCLUDE_DIR}
  ${PROJECT_SOURCE_DIR}
  ${PCL_INCLUDE_DIRS}
) 


# decide if we have pangolin
if (Pangolin_FOUND)
	message("--- found PANGOLIN, compiling dso_pangolin library.")
	include_directories( ${Pangolin_INCLUDE_DIRS} ) 
	set(dso_pangolin_SOURCE_FILES 
	  ${PROJECT_SOURCE_DIR}/src/IOWrapper/Pangolin/KeyFrameDisplay.cpp
	  ${PROJECT_SOURCE_DIR}/src/IOWrapper/Pangolin/PangolinDSOViewer.cpp)
	set(HAS_PANGOLIN 1)
else ()
	message("--- could not find PANGOLIN, not compiling dso_pangolin library.")
	message("    this means there will be no 3D display / GUI available for dso_dataset.")
	set(dso_pangolin_SOURCE_FILES )
	set(HAS_PANGOLIN 0)
endif ()

# decide if we have openCV
if (OpenCV_FOUND)
	message("--- found OpenCV, compiling dso_opencv library.")
	include_directories( ${OpenCV_INCLUDE_DIRS} )
	set(dso_opencv_SOURCE_FILES 
	  ${PROJECT_SOURCE_DIR}/src/IOWrapper/OpenCV/ImageDisplay_OpenCV.cpp
	  ${PROJECT_SOURCE_DIR}/src/IOWrapper/OpenCV/ImageRW_OpenCV.cpp)
	set(HAS_OPENCV 1)
else ()
	message("--- could not find OpenCV, not compiling dso_opencv library.")
	message("    this means there will be no image display, and image read / load functionality.")
	set(dso_opencv_SOURCE_FILES 
	  ${PROJECT_SOURCE_DIR}/src/IOWrapper/ImageDisplay_dummy.cpp
	  ${PROJECT_SOURCE_DIR}/src/IOWrapper/ImageRW_dummy.cpp)
	set(HAS_OPENCV 0)
endif ()

# decide if we have ziplib.
if (LIBZIP_LIBRARY)
	message("--- found ziplib (${LIBZIP_VERSION}), compiling with zip capability.")
	add_definitions(-DHAS_ZIPLIB=1)
	include_directories( ${LIBZIP_INCLUDE_DIR_ZIP} ${LIBZIP_INCLUDE_DIR_ZIPCONF} ) 
else()
	message("--- not found ziplib (${LIBZIP_LIBRARY}), compiling without zip capability.")
	set(LIBZIP_LIBRARY "")
endif()

## 2DGS
# simple_knn
add_library(simple_knn SHARED
    thirdparty/simple-knn/simple_knn.cu
    thirdparty/simple-knn/simple_knn.h
    thirdparty/simple-knn/spatial.cu
    thirdparty/simple-knn/spatial.h)
if(USE_ROCM)
    set_source_files_properties(
        thirdparty/simple-knn/simple_knn.cu
        thirdparty/simple-knn/spatial.cu
        PROPERTIES LANGUAGE HIP
    )
    set_target_properties(simple_knn PROPERTIES
        HIP_ARCHITECTURES "gfx906;gfx908;gfx1030;gfx1100")
endif()
# target_compile_features(simple_knn PUBLIC cxx_std_17)
if(USE_ROCM)
    target_link_libraries(simple_knn ${GSO_TORCH_TARGET_LIBRARIES} hip::hipcub)
else()
    target_link_libraries(simple_knn "${TORCH_LIBRARIES}")
endif()

# rasterizer
add_library(cuda_rasterizer SHARED
    include/operate_points.h
    src/GS/operate_points.cu
    include/rasterize_points.h
    src/GS/rasterize_points.cu
    include/stereo_vision.h
    src/GS/stereo_vision.cu
    cuda_rasterizer/auxiliary.h
    cuda_rasterizer/backward.cu
    cuda_rasterizer/backward.h
    cuda_rasterizer/config.h
    cuda_rasterizer/forward.cu
    cuda_rasterizer/forward.h
    cuda_rasterizer/operate_points.h
    cuda_rasterizer/rasterizer.h
    cuda_rasterizer/rasterizer_impl.cu
    cuda_rasterizer/rasterizer_impl.h
    cuda_rasterizer/stereo_vision.h)
if(USE_ROCM)
    set_source_files_properties(
        cuda_rasterizer/rasterizer_impl.cu
        cuda_rasterizer/forward.cu
        cuda_rasterizer/backward.cu
        src/GS/operate_points.cu
        src/GS/rasterize_points.cu
        src/GS/stereo_vision.cu
        PROPERTIES LANGUAGE HIP
    )
    set_target_properties(cuda_rasterizer PROPERTIES
        HIP_ARCHITECTURES "gfx906;gfx908;gfx1030;gfx1100")
else()
    set_target_properties(cuda_rasterizer PROPERTIES CUDA_ARCHITECTURES "75;86")
endif()
# target_compile_features(cuda_rasterizer PUBLIC cxx_std_17)
if(USE_ROCM)
    target_link_libraries(cuda_rasterizer
        glm::glm
        ${GSO_TORCH_TARGET_LIBRARIES}
        hip::hipcub
    )
else()
    target_include_directories(cuda_rasterizer PRIVATE
        ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
    target_link_libraries(cuda_rasterizer
        glm::glm
        ${TORCH_LIBRARIES}
        # Eigen3::Eigen
    )
endif()

##################################################################################
##  Build the ImGui library to ${PROJECT_SOURCE_DIR}/lib
##################################################################################

add_library(imgui SHARED
    viewer/imgui/imconfig.h
    viewer/imgui/imgui_demo.cpp
    viewer/imgui/imgui_draw.cpp
    viewer/imgui/imgui_impl_glfw.cpp
    viewer/imgui/imgui_impl_glfw.h
    viewer/imgui/imgui_impl_opengl3_loader.h
    viewer/imgui/imgui_impl_opengl3.cpp
    viewer/imgui/imgui_impl_opengl3.h
    viewer/imgui/imgui_internal.h
    viewer/imgui/imgui_tables.cpp
    viewer/imgui/imgui_widgets.cpp
    viewer/imgui/imgui.cpp
    viewer/imgui/imgui.h
    viewer/imgui/imstb_rectpack.h
    viewer/imgui/imstb_textedit.h
    viewer/imgui/imstb_truetype.h)
target_link_libraries(imgui glfw OpenGL::GL)

##################################################################################
##  Build the gaussian mapper library to ${PROJECT_SOURCE_DIR}/lib
##################################################################################

add_library(gaussian_mapper SHARED
    thirdparty/tinyply/tinyply.h
    thirdparty/tinyply/tinyply.cpp
    include/gaussian_keyframe.h
    include/gaussian_model.h
    include/gaussian_parameters.h
    include/gaussian_rasterizer.h
    include/gaussian_renderer.h
    include/gaussian_scene.h
    include/gaussian_trainer.h
    include/gaussian_mapper.h
    include/general_utils.h
    include/graphics_utils.h
    include/loss_utils.h
    include/sh_utils.h
    include/tensor_utils.h
    include/camera.h
    include/point_cloud.h
    include/point2d.h
    include/point3d.h
    include/types.h
    src/GS/gaussian_keyframe.cpp
    src/GS/gaussian_model.cpp
    src/GS/gaussian_parameters.cpp
    src/GS/gaussian_rasterizer.cpp
    src/GS/gaussian_renderer.cpp
    src/GS/gaussian_scene.cpp
    src/GS/gaussian_trainer.cpp
    src/GS/gaussian_mapper.cpp)
target_link_libraries(gaussian_mapper
    # ${ORB_SLAM3_SOURCE_DIR}/lib/libORB_SLAM3.so
    ${OpenCV_LIBRARIES}
    jsoncpp_lib
    ${GSO_TORCH_TARGET_LIBRARIES}
    # Eigen3::Eigen
    $<TARGET_FILE:simple_knn>
    $<TARGET_FILE:cuda_rasterizer>)
if(USE_ROCM)
    add_dependencies(gaussian_mapper simple_knn cuda_rasterizer)
    set_property(TARGET gaussian_mapper APPEND_STRING PROPERTY COMPILE_FLAGS " -x c++")
endif()

##################################################################################
##  Build the viewer library to ${PROJECT_SOURCE_DIR}/lib
##################################################################################

add_library(gaussian_viewer SHARED
    viewer/drawer_utils.h
    viewer/imgui_viewer.cpp
    viewer/imgui_viewer.h
    # viewer/map_drawer.cpp
    # viewer/map_drawer.h
    )
target_link_libraries(gaussian_viewer
    # ${ORB_SLAM3_SOURCE_DIR}/lib/libORB_SLAM3.so
    $<LINK_ONLY:gaussian_mapper>
    imgui
    ${OpenCV_LIBRARIES}
    jsoncpp_lib
    ${GSO_TORCH_TARGET_LIBRARIES}
    glm::glm
    glfw
    OpenGL::GL)
if(USE_ROCM)
    set_property(TARGET gaussian_viewer APPEND_STRING PROPERTY COMPILE_FLAGS " -x c++")
endif()

# compile main library.
include_directories( ${CSPARSE_INCLUDE_DIR} ${CHOLMOD_INCLUDE_DIR}) 
add_library(dso ${dso_SOURCE_FILES} ${dso_opencv_SOURCE_FILES} ${dso_pangolin_SOURCE_FILES})
if(USE_ROCM)
    target_link_libraries(dso ${GSO_TORCH_TARGET_LIBRARIES})
    set_property(TARGET dso APPEND_STRING PROPERTY COMPILE_FLAGS " -x c++")
else()
    target_link_libraries(dso ${TORCH_LIBRARIES})
endif()

#set_property( TARGET dso APPEND_STRING PROPERTY COMPILE_FLAGS -Wall )
#set_property(TARGET dso PROPERTY CXX_STANDARD 17)

if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin") # OSX
    set(BOOST_THREAD_LIBRARY boost_thread-mt)
else()
    set(BOOST_THREAD_LIBRARY boost_thread)
endif()

# build main executable (only if we have both OpenCV and Pangolin)
if (OpenCV_FOUND AND Pangolin_FOUND)
	message("--- compiling dso_dataset.")
	add_executable(dso_dataset ${PROJECT_SOURCE_DIR}/src/main_dso_pangolin.cpp )
    target_link_libraries(dso_dataset PRIVATE dso boost_system cxsparse ${BOOST_THREAD_LIBRARY} ${LIBZIP_LIBRARY} ${Pangolin_LIBRARIES} ${OpenCV_LIBS} 
                            ${GSO_TORCH_TARGET_LIBRARIES} $<LINK_ONLY:gaussian_mapper> rerun_sdk $<LINK_ONLY:gaussian_viewer>)
    if(USE_ROCM)
        set_property(TARGET dso_dataset APPEND_STRING PROPERTY COMPILE_FLAGS " -x c++")
    endif()

else()
	message("--- not building dso_dataset, since either don't have openCV or Pangolin.")
endif()
